# Checkers

./: CMakeLists.txt  main.cpp
game/: CMakeLists.txt  cell.cpp  field.cpp  field.h  functions.cpp  game.cpp  game.h  step.cpp  step.h
strategies/: computer1.cpp  computer2.cpp  computer_interface.cpp  human.cpp  human.h  interface.h
